# hw2

./: .travis.yml  CMakeLists.txt  README.md  text.txt
src/: example.c
src/main/: main.c  main_parallel.c  main_standard.c  mylib.c  mylib.h  text.txt
src/parallel/: parallel.c  parallel.h
src/standard/: standard.c  standard.h
src/test/: doyle_the_adventures.txt  filesize_test1.txt  mytests.cpp  stress_test.cpp
